--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,10 @@
     "lib": [
       "ES2022",
       "dom"
-    ]
+    ],
+    "path": {
+      "@components/*": "./src/components/*"
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
