fix css main grid and container

--- a/angular.json
+++ b/angular.json
@@ -21,8 +21,8 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
-              "public/favicon.ico",
-              "public/assets"
+              "src/favicon.ico",
+              "src/assets"
             ],
             "styles": [
               "src/styles.css"
